Fix bullet alignment in inversion tool

--- a/components/elements/Inversion/InversionElement.module.scss
+++ b/components/elements/Inversion/InversionElement.module.scss
@@ -63,5 +63,7 @@
 }
 
 .sublistItemParagraph {
+  display: inline-block;
   margin: 0;
+  vertical-align: text-top;
 }
